# MOS6502-Emulaador

./: .gitignore  CMakeLists.txt  EmuladorNES.vcxproj  EmuladorNES.vcxproj.filters  bus.cpp  bus.h  codigo_projeto1.txt  cpu.cpp  cpu.h  cpu_debug.cpp  cpu_instrucoes.cpp  cpu_modos.cpp  crash_log.txt  estrutura_projeto.txt  imgui.ini  main.cpp  ppu.cpp  ppu.h  script.py
src/core/: apu.cpp  apu.h  bus.cpp  bus.h  cpu.cpp  cpu.h  cpu_debug.cpp  cpu_instrucoes.cpp  cpu_modos.cpp  ppu.cpp  ppu.h
src/frontend/: gui.cpp  gui.h  main.cpp
